2010-06-15  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump HotSpot changeset ID and HA256 checksum
	to incorporate recent Zero fixes (as in OpenJDK6).

2010-06-15  Stefan Ring  <stefan@complang.tuwien.ac.at>

	PR icedtea/495
	* patches/boot/jar.patch: Apply workaround in more places.

2010-06-14  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(SRC_DIR_LINK): Use reflink only if hard
	linking is not possible.
	(generated.stamp): Replace $(REFLINK) with
	$(SRC_DIR_LINK).
	(liveconnect-dist.stamp): Likewise.
	(netx-dist.stamp): Likewise.
	* acinclude.m4:
	(IT_CAN_HARDLINK_TO_SOURCE_TREE): Check if hardlinking
	to files in the source directory from the build directory
	is possible.
	* configure.ac:
	Invoke IT_CAN_HARDLINK_TO_SOURCE_TREE.

2010-06-14  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(REFLINK): Remove unneeded quotation.
	(OPENJDK_SRC_DIR_LINK): Use reflink only
	if hard linking is not possible.
	(extract-openjdk.stamp): Replace $(REFLINK)
	with $(OPENJDK_SRC_DIR_LINK).
	* acinclude.m4:
	(IT_CP_SUPPORTS_REFLINK): Define once only.
	(WITH_OPENJDK_SRC_DIR): Define once only.
	Check that directory is valid (to the extent
	this is discernable by the README being present)
	and whether hardlinking is possible, defining
	OPENJDK_SRC_DIR_HARDLINKABLE if it is.

2010-06-14  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(REFLINK): Set to --reflink=auto if
	CP_SUPPORTS_REFLINK is defined.
	(extract-openjdk.stamp): Replace --reflink=auto
	with $(REFLINK).
	(generated.stamp): Likewise.
	(liveconnect-dist.stamp): Likewise.
	(netx-dist.stamp): Likewise.
	* acinclude.m4:
	(IT_CP_SUPPORTS_REFLINK): New macro to check
	for a cp new enough to have --reflink.
	* configure.ac:
	Invoke IT_CP_SUPPORTS_REFLINK.

2010-06-12  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump HotSpot and JDK changeset IDs and
	SHA256 checksums to incorporate recent
	Zero fixes and NSS error output fix.
